# Mind-Map-Builder

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  export.rs  files.rs  mod.rs  node_templates.rs  project.rs
src/@types/: global.d.ts  tauri.d.ts
src/app/: globals.css  page.tsx
src/app/designer/: page.tsx
src/app/editor/: page.tsx
src/app/export/: page.tsx
src/components/: help-modal.tsx  new-project-modal.tsx  printable-view.tsx  settings-modal.tsx
src/components/canvas/: context-menu.tsx  mind-map-canvas.tsx  mind-map-edge.tsx  mind-map-node.tsx
src/components/canvas/nodes/: circle-node.tsx  custom-node.tsx  image-node.tsx  oval-node.tsx  rectangle-node.tsx  rounded-node.tsx  text-node.tsx
src/components/ui/: dialog.tsx  flag-en.tsx  flag-fr.tsx  select.tsx  textarea.tsx  toggle-group.tsx  tooltip.tsx
src/config/: config.ts  translations.ts
src/hooks/: use-config.tsx  use-history.ts  use-updater.tsx
src/lib/: default-node-templates.ts  node-templates.ts
src/services/: config.service.ts  node-template.service.ts  project-manager.ts  tauri.ts  updater.service.ts  utils.ts  window.service.ts
